fix title alignment

--- a/src/app/components/win-holder-priorization/win-holder-priorization.component.css
+++ b/src/app/components/win-holder-priorization/win-holder-priorization.component.css
@@ -91,6 +91,7 @@
     font-weight: bold;
     display: table-cell;
     text-align: center;
+    float: left;
 }
 
 app-win-condition-input#weight-value input {
